# autohire

./: .env.example  .gitignore  README.md  mcp_config.json  study_prompt.md
agents/: autogen_demo.py  batch.py  hr_hitl.py  interview_crew.py  jd_parser.py  planner.py  reporter.py
api/: server.py
backend/: pyproject.toml  requirements.txt  run_server.py  start_server.py
backend/agents/: _prompts.py  auto_gen_orchestrator.py  batch.py  crewai_demo.py  hr_hitl.py  interview_crew.py  jd_parser.py  matcher.py  planner.py  resume_parser.py  router.py  web_searcher.py
backend/api/: server.py
backend/core/: llm_factory.py  mcp_client.py  schemas.py  structured_output.py  tavily_mcp_client.py
backend/data/: generate_fixtures.py
backend/data/jds/: algo_recommendation_jd.txt  backend_python_jd.txt  data_engineer_jd.txt  frontend_vue_jd.txt  fullstack_jd.txt  nlp_engineer_jd.txt
backend/data/resumes/: 杜逸剑 - 副本 - 副本.docx
backend/mcp_servers/: resume_server.py  supervisor.py
backend/tests/: test_batch.py  test_jd_parser.py  test_matcher.py  test_matcher_web_search.py  test_mcp.py  test_mcp_integration.py  test_planner.py  test_resume_parser.py  test_router.py  test_schemas.py  test_web_searcher.py
core/: llm_factory.py  schemas.py
data/: eval_results.json  ground_truth.json
eval/: run_eval.py
frontend/: index.html  package-lock.json  package.json  run_dev.py  vite.config.js
frontend/src/: App.vue  (+3 more)
tests/: sse_client.py  test_api.py  test_batch_logic.py  test_document_parser.py  test_planner.py  test_schemas.py  test_structured_output.py
web/: index.html
(+1 files in other folders)
